plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.plaything'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom("org.springframework.cloud:spring-cloud-dependencies:2023.0.3")
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.webjars:stomp-websocket:2.3.3-1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //jwt
    implementation 'com.auth0:java-jwt:3.12.0'

    // Hashing
    implementation 'org.springframework.security:spring-security-core:5.8.3'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // mysql
    implementation 'com.mysql:mysql-connector-j:8.0.31'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'mysql:mysql-connector-java:8.0.28'

    //s3
    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
    implementation 'javax.xml.bind:jaxb-api:2.3.0'

    //Image resize
    implementation 'net.coobird:thumbnailator:0.4.14'


    //QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //Redis test
    testImplementation 'org.testcontainers:testcontainers:1.19.3'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
    // for resilience4j
    implementation("org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j")
    // 아래 의존성 추가하지 않으면 @CircuitBreaker 어노테이션이 동작하지 않음
    implementation("org.springframework.boot:spring-boot-starter-aop")

    //Firebase
    implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.2.0'

    //Fign Client
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    //Ahocreasick
    implementation 'org.ahocorasick:ahocorasick:0.6.3'

}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    jvmArgs '-Djdk.attach.allowAttachSelf=true'
}
